# moxie-discord-bot

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
entity/: Cargo.toml
entity/src/: active_character.rs  channel_pool.rs  character.rs  lib.rs  prelude.rs  server_pool.rs  suspense.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240801_042205_create_tables.rs  m20241128_194627_add_suspense_table.rs  m20250215_174654_add_character_table.rs  m20250215_205851_add_active_character_table.rs
src/: database.rs  error.rs  main.rs  pool.rs  pools_in_database.rs  rolls.rs
src/commands/: character.rs  mod.rs  pool.rs  roll.rs  suspense.rs
src/commands/crucibles/: LICENSE  age.json  bard_instrument.json  barrier1.json  barrier2.json  body.json  building1.json  building2.json  city_names1.json  city_names2.json  clothing.json  crucibles.json  curiosities1.json  curiosities2.json  dangers1.json  dangers2.json  druid_tells.json  eyes.json  factions1.json  factions2.json  gm1.json  gm2.json  herbalism_form.json  herbalism_name.json  heritage_land.json  heritage_mood.json  heritage_people.json  martial_arts_concept.json  martial_arts_stance.json  martial_arts_weapon.json  mod.rs  names_family.json  names_given.json  patron_desires.json  patron_entity.json  realities.json  schools.json  settlement1.json  settlement2.json  sites1.json  (+8 more)
