[package]
name = "moxie-discord-bot"
version = "0.2.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
sea-orm = { workspace = true }
anyhow = "1.0.66"
entity = { path = "entity" }
itertools = "0.13.0"
poise = "0.6.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres"] }
tokio = "1.26.0"
tracing = "0.1.37"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
chrono = "0.4.38"
nom = "7.1.3"

[workspace.dependencies]
sea-orm = { version = "1", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio",
    "macros",
    "with-chrono",
] }
