[package]
name = "moxie-discord-bot"
version = "0.10.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
sea-orm = { workspace = true }
anyhow = "1.0.66"
entity = { path = "entity" }
itertools = "0.14.0"
poise = "0.6.1"
rand = "0.9.0"
rand_distr = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-runtime = "0.52.0"
shuttle-serenity = "0.52.0"
shuttle-shared-db = { version = "0.52.0", features = ["postgres"] }
tokio = "1.26.0"
tracing = "0.1.37"
strum = { version = "0.27.0", features = ["derive"] }
thiserror = "2.0.3"
chrono = "0.4.38"
nom = "8.0.0"
derive_setters = "0.1.6"
derive_more = { version = "2.0.1", features = ["display", "from"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
lazy-regex = "3.4.1"

[workspace.dependencies]
sea-orm = { version = "1", default-features = false, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
